syntax = "proto3";
package pb;
option go_package="github.com/grpc/gobus/service/pb";

service ProviderServices{
    rpc ProviderSignUp(ProviderDataRequest) returns (result);
    rpc ProviderLogin(LoginRequest)returns (result);
    rpc EditProvider(ProviderDataRequest)returns (result);
    rpc DeleteProviderById(IdRequest)returns (result);
    rpc FindProviderById(IdRequest)returns (result);
    rpc CreateProvider(ProviderDataRequest)returns (result);
}
message ProviderDataRequest{
    string UserName = 1;
    string Password = 2;
    string Email = 3;
}
message LoginRequest{
    string Username = 1;
    string Password = 2;
}
message IdRequest{
    uint32 Id = 1;
}
message result{
    string status = 1;
    string error = 2;
    string message = 3;
}
